--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -2152,7 +2152,7 @@
 "~^/docs/iq/2016-lubinski\.pdf$" "/docs/iq/smpy/2016-lubinski.pdf";
 "~^/docs/iq/2016-makel\.pdf$" "/docs/iq/smpy/2016-makel.pdf";
 "~^/docs/japanese/1940-nippongakujutsushinkokan-manyoshu\.pdf$" "/docs/japanese/1940-nippongakujutsushinkokai-manyoshu.pdf";
-"~^/docs/japanese/1959-saikaku-thejapanesefamilystorehouse\.djvu$" "http://libgen.rs/book/index.php?md5=2558F70CBF8F92880114E177CBE7A209";
+"~^/docs/japanese/1959-saikaku-thejapanesefamilystorehouse\.djvu$" "http://libgen.rs/book/index.php?md5=2558F70CBF8F92880114E177CBE7A209"; # DMCA
 "~^/docs/japanese/1974-scheiner-modernjapan\.djvu$" "/docs/japanese/1974-scheiner-modernjapan.pdf";
 "~^/docs/japanese/1976-browerfujiwarateikashundredpoemsequenceoftheshojiera-part1\.pdf$" "/docs/japanese/1976-brower-fujiwarateikashundredpoemsequenceoftheshojiera-part1.pdf";
 "~^/docs/japanese/1976-hisamatsu-biographicaldictionaryofjapaneseliterature\.djvu$" "/docs/japanese/1976-hisamatsu-biographicaldictionaryofjapaneseliterature.pdf";
@@ -5295,7 +5295,7 @@
 "~^/404$" "/static/404";
 "~^/book-of-punishment.*$" "/static/404";
 "~^/docs/catnip/2000-turner-thedomesticcat\.pdf$" "/static/404";
-"~^/docs/japanese/1959-saikaku-thejapanesefamilystorehouse\.pdf$" "http://libgen.rs/book/index.php?md5=2558F70CBF8F92880114E177CBE7A209";
+"~^/docs/japanese/1959-saikaku-thejapanesefamilystorehouse\.pdf$" "http://libgen.rs/book/index.php?md5=2558F70CBF8F92880114E177CBE7A209"; # DMCA
 "~^/\.gitignore$" "/static/404";
 "~^/book-of-punishment%3Frevision\=20120423212440-f7719-fc1b695abb0427bcc07ad5423e7f9dbcde109eb5$" "/static/404";
 "~^/docs/economics/2003-gaspard\.pdf.*$" "http://libgen.rs/scimag/10.1080%2F1042771032000147498"; # DMCA
@@ -5765,7 +5765,7 @@
 "~^/B$" "/Bitcoin-is-Worse-is-Better";
 "~^/Nicottine$" "/Nicotine";
 "~^/genetics$" "/docs/genetics/index";
-"~^/docs/statistics/1971-feller-anintroductiontoprobabilitytheoryanditsapplications\.pdf$" "http://gen.lib.rus.ec/search.php?req=1971%20feller%20an%20introduction%20to%20probability%20theory%20and%20its%20applications";
+"~^/docs/statistics/1971-feller-anintroductiontoprobabilitytheoryanditsapplications\.pdf$" "http://gen.lib.rus.ec/search.php?req=1971%20feller%20an%20introduction%20to%20probability%20theory%20and%20its%20applications"; # I don't think I ever hosted this, just another anon guessing
 "~^/Evolutionary-Lic$" "/Evolutionary-Licenses";
 "~^/-Mail--delivery$" "/Mail-delivery";
 "~^/N-back-FAQ\.html$" "/DNB-FAQ";
@@ -14488,7 +14488,7 @@
 "~^/docs/2012-zeo-vitamind-morning.csv$" "/docs/zeo/2012-zeo-vitamind-morning.csv";
 "~^/docs/borges/1939-borges-thetotallibrar$" "/docs/borges/1939-borges-thetotallibrary.pdf";
 "~^/docs/catnip/favicon.ico$" "/static/img/favicon.ico";
-"~^/docs/cs/1985-feynman-surelyyourejokingmrfeynman-ch1.pdf$" "http://gen.lib.rus.ec/search.php?req=Surely+You%27re+Joking%2C+Mr+Feynman&lg_topic=libgen&open=0&view=simple&res=25&phrase=1&column=def";
+"~^/docs/cs/1985-feynman-surelyyourejokingmrfeynman-ch1.pdf$" "http://gen.lib.rus.ec/search.php?req=Surely+You%27re+Joking%2C+Mr+Feynman&lg_topic=libgen&open=0&view=simple&res=25&phrase=1&column=def"; # not DMCA, just an anon looking for the other chapters (which I don't host)
 "~^/docs/genetics/selection/2019-dunkel$" "/docs/genetics/selection/2019-dunkel.pdf";
 "~^/docs/longevity/2012-election-predictions$" "/2012-election-predictions";
 "~^/docs/psycholog...universals.pdf$" "/docs/psychology/1991-brown-humanuniversals.pdf";
@@ -16793,7 +16793,7 @@
 "~^/docs/genetics/2003-plomin.pdf.*$" "/docs/genetics/heritable/2003-plomin.pdf";
 "~^/docs/genetics/selection/www.mountimprobable.com/index$" "/docs/genetics/selection/www.mountimprobable.com/about/index.html";
 "~^/docs/iodine/200$" "/docs/iodine/index";
-"~^/docs/japanese/1959-saikaku-thejapanesefamilystorehouse.djvu\?utm_.*$" "http://libgen.rs/book/index.php?md5=2558F70CBF8F92880114E177CBE7A209";
+"~^/docs/japanese/1959-saikaku-thejapanesefamilystorehouse.djvu\?utm_.*$" "http://libgen.rs/book/index.php?md5=2558F70CBF8F92880114E177CBE7A209"; # DMCA
 "~^/GPT-3\&$" "/GPT-3";
 "~^/images/thumbnails/wikipedia/213px-Connor_Franta_at_Camp17\'s_Creator_Camp.jpg$" "/images/thumbnails/wikipedia/213px-Connor_Franta_at_Camp17s_Creator_Camp.jpg";
 "~^/images/thumbnails/wikipedia/320px-Bayes\'_Theorem_MMB_01.jpg$" "/images/thumbnails/wikipedia/320px-Bayes_Theorem_MMB_01.jpg";
@@ -23013,6 +23013,13 @@
 "~^/nootropic$" "/Nootropics";
 "~^http://www.rfa.org/english/.*$" "https://www.rfa.org/english/";
 "~^/docs/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html-.*$" "/docs/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html";
+"~^/Prediction-market$" "/Prediction-markets";
+"~^/docs/statistics/decision/2022-glimc$" "/docs/statistics/decision/2022-glimcher.pdf";
+"~^/docs/eva/2005-little-boy$" "/docs/eva/little-boy/2005-little-boy";
+"~^/docs/ig/2015-strenze.pdf.*$" "/docs/iq/2015-strenze.pdf";
+"~^/docs/eva/2005-sawaragi$"  "/docs/eva/little-boy/2005-sawaragi";
+"~^/banboor.*$" "/Danbooru201";
+"~^/BanBooru2021.*$" "/Danbooru201";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27242,6 +27249,7 @@
 "~^/t9m.ru.*$" "/static/404";
 "~^/_/.ssh/.*$" "/static/404";
 "~^/src/.*config\.js.*$" "/static/404";
+"~^/class-wp-widget-.*$" "/static/404.html";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
