--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3967,3 +3967,22 @@ default "";
 "~^/docs/ai/2006-friston.pdf.*$" "/docs/ai/nn/2006-friston.pdf";
 "~^/docs/ai/1990-opper.pdf.*$" "/docs/ai/nn/1990-opper.pdf";
 "~^/docs/ai/1986-rumelhart.pdf.*$" "/docs/ai/nn/1986-rumelhart.pdf";
+"~^/docs/iq/2019-barth.pdf.*$" "/docs/economics/2020-barth.pdf";
+"~^/docs/algernon/2011-lynch.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3114293/";
+"~^/docs/ai/2015-porzi.pdf.*$" "/docs/ai/nn/2015-porzi.pdf";
+"~^/docs/ai/1996-haussler.pdf.*$" "/docs/ai/scaling/1996-haussler.pdf";
+"~^/docs/ai/1996-opper.pdf.*$" "/docs/ai/nn/1996-opper.pdf";
+"~^/docs/ai/1993-watkin.pdf.*$" "/docs/ai/nn/1993-watkin.pdf";
+"~^/docs/ai/1993-amari.pdf.*$" "/docs/ai/scaling/1993-amari.pdf";
+"~^/docs/ai/1993-rumelhart.pdf.*$" "/docs/ai/nn/1993-rumelhart.pdf";
+"~^/docs/ai/2015-lecun.pdf.*$" "/docs/ai/nn/2015-lecun.pdf";
+"~^/docs/ai/2013-clark.pdf.*$" "/docs/ai/nn/2013-clark.pdf";
+"~^/docs/ai/2001-ng.pdf.*$" "/docs/ai/scaling/2001-ng.pdf";
+"~^/docs/ai/1999-brain.pdf.*$" "/docs/ai/scaling/1999-brain.pdf";
+"~^/docs/ai/1991-shavlik.pdf.*$" "/docs/ai/nn/1991-shavlik.pdf";
+"~^/docs/ai/1990-dreyfus.pdf.*$" "/docs/ai/nn/1990-dreyfus.pdf";
+"~^/docs/ai/1990-schwartz.pdf.*$" "/docs/ai/nn/1990-schwartz.pdf";
+"~^/docs/ai/1988-hillis.pdf.*$" "/docs/ai/scaling/hardware/1988-hillis.pdf";
+"~^/docs/ai/1985-rumelhart.pdf.*$" "/docs/ai/nn/1985-rumelhart.pdf";
+"~^/docs/ai/1962-rosenblatt-principlesofneurodynamics.pdf.*$" "/docs/ai/nn/1962-rosenblatt-principlesofneurodynamics.pdf";
+"~^/docs/iq/2021-deary.pdf.*$" "/docs/iq/ses/2021-deary.pdf";
