--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -662,6 +662,7 @@ server {
         rewrite ^/docs/ai/fully-connected/(?<old>.*)$ /docs/ai/nn/fully-connected/$old permanent;
         rewrite ^/docs/conscientiousness/(?<old>.*)$ /docs/psychology/personality/conscientiousness/$old permanent;
         rewrite ^/xf/BL_Images/(?<original>.*)$ https://www.bluelight.org/xf/BL_Images/$original permanent;
+        rewrite ^/docs/sf/(?<old>.*)$ /docs/fiction/science-fiction/$old permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotations/https%3A%2F%2F$original permanent;
