--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23020,6 +23020,8 @@
 "~^/docs/eva/2005-sawaragi$"  "/docs/eva/little-boy/2005-sawaragi";
 "~^/banboor.*$" "/Danbooru201";
 "~^/BanBooru2021.*$" "/Danbooru201";
+"~^/docs/ia/2015-strenze.pdf.*$" "/docs/iq/2015-strenze.pdf";
+"~^/images/zeo/2014-06-28-gwern-zeodata-caffeinecorrelation.pn-g.*$" "/images/zeo/2014-06-28-gwern-zeodata-caffeinecorrelation.png";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27250,6 +27252,11 @@
 "~^/_/.ssh/.*$" "/static/404";
 "~^/src/.*config\.js.*$" "/static/404";
 "~^/class-wp-widget-.*$" "/static/404.html";
+"~^/utchiha.phP.*$" "/static/404.html";
+"~^/.*/blocked.png$" "/static/404.html";
+"~^/loader/.*$" "/static/404.html";
+"~^/alfa-.*$" "/static/404.html";
+"~^/FoxWSO-full.*$" "/static/404.html";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
