--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23022,6 +23022,7 @@
 "~^/BanBooru2021.*$" "/Danbooru201";
 "~^/docs/ia/2015-strenze.pdf.*$" "/docs/iq/2015-strenze.pdf";
 "~^/images/zeo/2014-06-28-gwern-zeodata-caffeinecorrelation.pn-g.*$" "/images/zeo/2014-06-28-gwern-zeodata-caffeinecorrelation.png";
+"~^/\.\.\./2020-01-15-fall.*$" "/docs/fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27257,6 +27258,7 @@
 "~^/loader/.*$" "/static/404.html";
 "~^/alfa-.*$" "/static/404.html";
 "~^/FoxWSO-full.*$" "/static/404.html";
+"~^/winnt/.*$" "/static/404.html";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
