+; lots of renaming tags & moving files

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -660,9 +660,23 @@ server {
         rewrite ^/docs/ai/stylegan/(?<old>.*)$ /docs/ai/gan/stylegan/$old permanent;
         rewrite ^/docs/ai/rnn/(?<old>.*)$ /docs/ai/nn/rnn/$old permanent;
         rewrite ^/docs/ai/fully-connected/(?<old>.*)$ /docs/ai/nn/fully-connected/$old permanent;
+        rewrite ^/docs/ai/gpt/(?<old>.*)$ /docs/ai/nn/transformer/gpt/$old permanent;
+        rewrite ^/docs/ai/gan/(?<old>.*)$ /docs/ai/nn/gan/$old permanent;
+        rewrite ^/docs/reinforcement-learning/alphago/(?<old>.*)$ /docs/reinforcement-learning/model/alphago/$old permanent;
+        rewrite ^/docs/reinforcement-learning/muzero/(?<old>.*)$ /docs/reinforcement-learning/model/muzero/$old permanent;
+        rewrite ^/docs/reinforcement-learning/oa5/(?<old>.*)$ /docs/reinforcement-learning/model-free/oa5/$old permanent;
+        rewrite ^/docs/reinforcement-learning/alphastar/(?<old>.*)$ /docs/reinforcement-learning/model-free/alphastar/$old permanent;
+        rewrite ^/docs/eva/(?<old>.*)$ /docs/anime/eva/$old permanent;
         rewrite ^/docs/conscientiousness/(?<old>.*)$ /docs/psychology/personality/conscientiousness/$old permanent;
+        rewrite ^/docs/spaced-repetition/(?<old>.*)$ /docs/psychology/spaced-repetition/$old permanent;
+        rewrite ^/docs/prediction/(?<old>.*)$ /docs/statistics/prediction/$old permanent;
+        rewrite ^/docs/terrorism/(?<old>.*)$ /docs/statistics/crime/terrorism/$old permanent;
+        rewrite ^/docs/genetics/selection/dysgenics/(?<old>.*)$ /docs/genetics/selection/natural/human/dysgenics/$old permanent;
+        rewrite ^/docs/genetics/selection/index-selection/(?<old>.*)$ docs/genetics/selection/artificial/index-selection/$old permanent;
+        rewrite ^/docs/genetics/selection/apple/(?<old>.*)$ docs/genetics/selection/artificial/apple/$old permanent;
         rewrite ^/xf/BL_Images/(?<original>.*)$ https://www.bluelight.org/xf/BL_Images/$original permanent;
         rewrite ^/docs/sf/(?<old>.*)$ /docs/fiction/science-fiction/$old permanent;
+        rewrite ^/(?<original>docs/.*),pdf$ /$original.pdf permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotations/https%3A%2F%2F$original permanent;
