--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23023,6 +23023,13 @@
 "~^/docs/ia/2015-strenze.pdf.*$" "/docs/iq/2015-strenze.pdf";
 "~^/images/zeo/2014-06-28-gwern-zeodata-caffeinecorrelation.pn-g.*$" "/images/zeo/2014-06-28-gwern-zeodata-caffeinecorrelation.png";
 "~^/\.\.\./2020-01-15-fall.*$" "/docs/fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/Danbooru2$" "/Danbooru2021";
+"~^/docs/darknet-markets/2013-power$" "/docs/darknet-markets/silk-road/1/2013-power";
+"~^/docs/iq/-re-erton/2005-gottfried.pdf.*$" "/docs/iq/fullerton/2005-gottfried.pdf";
+"~^/acodin.*$" "https://en.wikipedia.org/wiki/Dextromethorphan";
+"~^/docs/psychology/personality/conscientiousness/2003-elvers.pdf.Ga.*$" "/docs/psychology/personality/conscientiousness/2003-elvers.pdf";
+"~^/docs/darknet-markets/2012-07-24-lonelyk2000amel.mht.*$" "/docs/darknet-markets/2012-07-24-lonelykamel.mht";
+"~^/get-in-touch/.*$" "/Links#contact";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27259,6 +27266,7 @@
 "~^/alfa-.*$" "/static/404.html";
 "~^/FoxWSO-full.*$" "/static/404.html";
 "~^/winnt/.*$" "/static/404.html";
+"~^/media-library-pro/.*$" "/static/404.html";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
