--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4210,3 +4210,5 @@ default "";
 "~^/docs/genetics/selection/2021-scott.pdf.*$" "/docs/genetics/selection/artificial/2021-scott.pdf";
 "~^/docs/genetics/selection/2021-wynne.pdf.*$" "/docs/genetics/selection/artificial/2021-wynne.pdf";
 "~^/docs/genetics/selection/2019-karavani-supplement.pdf.*$" "/docs/genetics/selection/artificial/2019-karavani-supplement.pdf";
+"~^/docs/statistics/bayes/2010-stigler.pdf.*$" "/docs/statistics/bayes/2010-stigler-2.pdf";
+"~^/docs/reinforcement-learning/2001-hochreiter.pdf.*$" "/docs/reinforcement-learning/meta-learning/2001-hochreiter.pdf";
