--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23030,6 +23030,22 @@
 "~^/docs/psychology/personality/conscientiousness/2003-elvers.pdf.Ga.*$" "/docs/psychology/personality/conscientiousness/2003-elvers.pdf";
 "~^/docs/darknet-markets/2012-07-24-lonelyk2000amel.mht.*$" "/docs/darknet-markets/2012-07-24-lonelykamel.mht";
 "~^/get-in-touch/.*$" "/Links#contact";
+"~^/fragments-on-Joyce.*$" "/docs/borges/1941-borges-afragmentonjoyce.pdf";
+"~^/james-joyce-/ulyses.*$" "/docs/borges/1941-borges-afragmentonjoyce.pdf";
+"~^/[a-z]+/reader-mode.js$" "/static/js/reader-mode.js";
+"~^/docs/.*/reader-mode.js$" "/static/js/reader-mode.js";
+"~^/docs/psychology/personality/2021-mammadov.pdf.*$" "/docs/psychology/personality/conscientiousness/2021-mammadov.pdf";
+"~^/docs/psychology/personality/2020-andersen.pdf.*$" "/docs/psychology/personality/conscientiousness/2020-andersen.pdf";
+"~^/docs/darknet-markets/bungee54-forums-20141105-4172-deliverytimes.html$" "/docs/darknet-markets/bungee54-forums-20141105-4162-deliverytimes.html";
+"~^/docs/statistics/crime/terrorism/2011-dannenbaum.pdf.*$" "/docs/crime/terrorism/2011-dannenbaum.pdf";
+"~^/docs/statistics/crime/terrorism/2010-cochran.pdf.*$" "/docs/crime/terrorism/2010-cochran.pdf";
+"~^/static/Inflation.hi.*$" "/static/build/Inflation.hs";
+"~^/newsletter/.*/reader-mode.js.*$" "/static/js//reader-mode.js";
+"~^/docs/statistics/crime/terrorism/1989-andrew.pdf.*$" "/docs/crime/terrorism/1989-andrew.pdf";
+"~^/Google-shutdown$" "/Google-shutdowns";
+"~^/docs/link-bibliography/Forking-paths.*$" "/docs/link-bibliography/Forking-Paths";
+"~^/docs/borges/`1947-borges-anewrefutationoftime.pdf.*$" "/docs/borges/1947-borges-anewrefutationoftime.pdf";
+"~^/docs/psychology/1941-cleckley-maskofsanity.pdfç.*$" "/docs/psychology/1941-cleckley-maskofsanity.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -26339,7 +26355,7 @@
 "~^/servers/.*$" "/static/404";
 "~^/service-worker.*$" "/static/404";
 "~^/service/.*$" "/static/404";
-"~^/serviceworker\.js.*$" "/static/404";
+"~^/.*serviceworker\.js.*$" "/static/404";
 "~^/servlet/.*$" "/static/404";
 "~^/settings.*$" "/static/404";
 "~^/setup.bz.*$" "/static/404";
@@ -27267,6 +27283,18 @@
 "~^/FoxWSO-full.*$" "/static/404.html";
 "~^/winnt/.*$" "/static/404.html";
 "~^/media-library-pro/.*$" "/static/404.html";
+"~^/gg.tgz.*$" "/static/404.html";
+"~^/ftp.tgz.*$" "/static/404.html";
+"~^/flashfxp.tgz.*$" "/static/404.html";
+"~^/faisunzip.tgz.*$" "/static/404.html";
+"~^/wz.tgz.*$" "/static/404.html";
+"~^/\!W$" "/static/404.html";
+"~^/webEdit.tar.gz.*$" "/static/404.html";
+"~^/wangzhan.tgz.*$" "/static/404.html";
+"~^/vip.tgz.*$" "/static/404.html";
+"~^/bbs.tgz.*$" "/static/404.html";
+"~^/.*anhem88\.io.*$" "/static/404.html";
+"~^/.*www.cban.com.br.*$" "/static/404.html";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
