--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -674,6 +674,9 @@ server {
         rewrite ^/docs/genetics/selection/dysgenics/(?<old>.*)$ /docs/genetics/selection/natural/human/dysgenics/$old permanent;
         rewrite ^/docs/genetics/selection/index-selection/(?<old>.*)$ docs/genetics/selection/artificial/index-selection/$old permanent;
         rewrite ^/docs/genetics/selection/apple/(?<old>.*)$ docs/genetics/selection/artificial/apple/$old permanent;
+        rewrite ^/docs/genetics/correlation/(?<old>.*)$ docs/genetics/heritable/correlation/$old permanent;
+        rewrite ^/docs/linkrot/(?<old>.*)$ docs/cs/linkrot/$old permanent;
+        rewrite ^/docs/advertising/(?<old>.*)$ docs/economics/advertising/$old permanent;
         rewrite ^/xf/BL_Images/(?<original>.*)$ https://www.bluelight.org/xf/BL_Images/$original permanent;
         rewrite ^/docs/sf/(?<old>.*)$ /docs/fiction/science-fiction/$old permanent;
         rewrite ^/(?<original>docs/.*),pdf$ /$original.pdf permanent;
