--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -1468,8 +1468,8 @@
 "~^/docs/2010-crc$" "/docs/eva/2010-crc";
 "~^/docs/eva/2010$" "/docs/eva/2010-crc";
 "~^/docs/2010-koh\.pdf$" "/docs/eva/2010-koh.pdf";
-"~^/software/docs/eva/2011-house$" "/docs/eva/2011-house";
-"~^/docs/2011-house$" "/docs/eva/2011-house";
+"~^/software/docs/eva/2011-house$" "/docs/anime/eva/2011-house";
+"~^/docs/2011-house$" "/docs/anime/eva/2011-house";
 "~^/docs/2011-house\.page$" "/docs/eva/2011-house.page";
 "~^/docs/2011-mindframe\.pdf$" "/docs/eva/2011-mindframe.pdf";
 "~^/docs/eva/null$" "/docs/eva/index";
@@ -5986,7 +5986,7 @@
 "~^/docs/1999-bradb\.\.\.shkabrains\.pdf$" "/docs/ai/1999-bradbury-matrioshkabrains.pdf";
 "~^/docs/1999-bradbury-matrioshkabrains.pdfnnMore$" "/docs/ai/1999-bradbury-matrioshkabrains.pdf";
 "~^/docs/2002-notenki-memoirs.*$" "/docs/eva/2002-takeda-notenkimemoirs";
-"~^/docs/2011-house.*$" "/docs/eva/2011-house";
+"~^/docs/2011-house.*$" "/docs/anime/eva/2011-house";
 "~^/docs/a$" "/docs/index";
 "~^/docs/.*/static/img/favicon.png$" "/static/img/favicon.png";
 "~^/docs/.*/static/img/favicon.ico$" "/static/img/favicon.ico";
@@ -6686,7 +6686,7 @@
 "~^/2005-murakami$" "/docs/eva/2005-murakami";
 "~^/2005-sawaragi$" "/docs/eva/2005-sawaragi";
 "~^/2010-crc$" "/docs/eva/2010-crc";
-"~^/2011-house$" "/docs/eva/2011-house";
+"~^/2011-house$" "/docs/anime/eva/2011-house";
 "~^/2002-gibson$" "/docs/japanese/2002-gibson";
 "~^/teika$" "/docs/japanese/teika";
 "~^/2010-richardson-bythenumbers-vectors30$" "/docs/philo/2010-richardson-bythenumbers-vectors30";
@@ -11752,7 +11752,7 @@
 "~^/docs/cat$" "/docs/catnip/index";
 "~^/docs/Melatonin/1998-Lewy.*$" "/docs/melatonin/1998-lewy.pdf";
 "~^/Prediction-markets\\$" "/Prediction-markets";
-"~^/eva/2011-house.*$" "/docs/eva/2011-house";
+"~^/eva/2011-house.*$" "/docs/anime/eva/2011-house";
 "~^/docs/statistics/decision/1994-benter.p$" "/docs/statistics/decision/1994-benter.pdf";
 "~^/docs/statistics/decision/1994-benter.$" "/docs/statistics/decision/1994-benter.pdf";
 "~^/docs/statistics/decision/1994-benter$" "/docs/statistics/decision/1994-benter.pdf";
@@ -15755,7 +15755,7 @@
 "~^/newsltter/2018\/$" "/newsletter/2018/";
 "~^/newsltter/2019\/$" "/newsletter/2019/";
 "~^/NicotineI$" "/Nicotine";
-"~^/nootropics/docs/eva/2011-house$" "/docs/eva/2011-house";
+"~^/nootropics/docs/eva/2011-house$" "/docs/anime/eva/2011-house";
 "~^/On-Stress.html$" "/On-Stresso";
 "~^/static/3D\?.*$" "/static/404";
 "~^/The-Gift-of-the-Amyg-dali$" "/fiction/Batman";
@@ -18441,7 +18441,7 @@
 "~^/docs/psychology/okcupid/howyourraceaf$" "/docs/psychology/okcupid/samesexdataforracevsreplyrates.html";
 "~^/docs/fiction/1956-faulkner.html.*$" "https://www.theparisreview.org/interviews/4954/the-art-of-fiction-no-12-william-faulkner";
 "~^/docs/2015-rottensteiner.pdf.*$" "/docs/genetics/2015-rottensteiner.pdf";
-"~^/docs/2011-houe.*$" "/docs/eva/2011-house";
+"~^/docs/2011-houe.*$" "/docs/anime/eva/2011-house";
 "~^/\./docs/2010-sarrazin.*$" "/docs/anime/2010-sarrazin";
 "~^/\./docs/2007-wolfe.*$" "/docs/culture/2007-wolfe";
 "~^/\./docs/2002-radiance.*$" "/docs/radiance/2002-scholz-radiance";
@@ -20806,7 +20806,7 @@
 "~^/The-Value-of-One-Bit.*$" "/static/404";
 "~^/docs/link-bibliography/https/www.edge.org/conversation/mc2011-history-violence-pinker.*$" "https://www.edge.org/conversation/mc2011-history-violence-pinker";
 "~^/docs/link-bibliography/https/www.edge.org/conversation/the-evolved-self-management-system.*$" "https/www.edge.org/conversation/the-evolved-self-management-system";
-"~^/docs/[a-df-km-z].*/2011-house.*$" "/docs/eva/2011-house";
+"~^/docs/[a-df-km-z].*/2011-house.*$" "/docs/anime/eva/2011-house";
 "~^/docs/member/.*$" "/static/404";
 "~^/docs/p.*/Scanners.*$" "/Scanners";
 "~^/docs/p.*/Wikipedia-and-Knol.*$" "/Wikipedia-and-Knol";
@@ -23046,6 +23046,42 @@
 "~^/docs/link-bibliography/Forking-paths.*$" "/docs/link-bibliography/Forking-Paths";
 "~^/docs/borges/`1947-borges-anewrefutationoftime.pdf.*$" "/docs/borges/1947-borges-anewrefutationoftime.pdf";
 "~^/docs/psychology/1941-cleckley-maskofsanity.pdfç.*$" "/docs/psychology/1941-cleckley-maskofsanity.pdf";
+"~^/docs/iq/ses/2007-zagorsky.pdfga.*$" "/docs/iq/ses/2007-zagorsky.pdf";
+"~^/docs/cofee/index.*$" "/docs/tea/index";
+"~^/docs/coffee/index.*$" "/docs/tea/index";
+"~^/docs/darknet-marketsdarknet-markets/agora/index.*$" "/docs/darknet-markets/agora/index";
+"~^/images/gan/stylegan/2020-01-11-stylegan2-skylion-anime.*$" "/images/gan/stylegan/2020-01-11-stylegan2-skylion-animeportraits-24303.png";
+"~^/docs/link-bibliography/turing-complete.*$" "/docs/link-bibliography/Turing-complete";
+"~^/docs/personal/current_events_process.html.*$" "/docs/personal/2011-gwern-yourmorals.org/current_events_process.html";
+"~^/docs/statistics/prediction/@gwern-about-section.*$" "/docs/statistics/prediction/index";
+"~^/docs/rotten.com/library/sex/sexual-ethics-in-psychology/index$" "/docs/rotten.com/library/sex/sexual-ethics-in-psychology/index.html";
+"~^/docs/rotten.com/library/sex/penis-cakes/index$" "/docs/rotten.com/library/sex/penis-cakes/index.html";
+"~^/docs/rotten.com/library/sex/masturbation/kelloggs-cornflakes/index$" "/docs/rotten.com/library/sex/masturbation/kelloggs-cornflakes/index.html";
+"~^/docs/rotten.com/library/hoaxes/kinderhook-plates/index$" "/docs/rotten.com/library/hoaxes/kinderhook-plates/index.html";
+"~^/docs/rotten.com/library/history/mountain-meadows-massacre/index$" "/docs/rotten.com/library/history/mountain-meadows-massacre/index.html";
+"~^/docs/rotten.com/library/culture/batman/theme-song/index$" "/docs/rotten.com/library/culture/batman/theme-song/index.html";
+"~^/docs/rotten.com/library/culture/banned-cartoons/index$" "/docs/rotten.com/library/culture/banned-cartoons/index.html";
+"~^/docs/rotten.com/library/bio/hackers/steve-wozniak/index$" "/docs/rotten.com/library/bio/hackers/steve-wozniak/index.html";
+"~^/docs/rotten.com/library/bio/hackers/robert-morris/index$" "/docs/rotten.com/library/bio/hackers/robert-morris/index.html";
+"~^/docs/rotten.com/library/bio/hackers/kevin-mitnick/index$" "/docs/rotten.com/library/bio/hackers/kevin-mitnick/index.html";
+"~^/docs/rotten.com/library/bio/entertainers/comic/david-letterman/index$" "/docs/rotten.com/library/bio/entertainers/comic/david-letterman/index.html";
+"~^/docs/rotten.com/library/bio/crime/mafia/lucky-luciano/index$" "/docs/rotten.com/library/bio/crime/mafia/lucky-luciano/index.html";
+"~^/about@writing-checklist.*$" "/About#writing-checklist";
+"~^/about@the-content.*$" "/About#the-content";
+"~^/about@technical-aspects.*$" "/About#technical-aspects";
+"~^/about@target-audience.*$" "/About#target-audience";
+"~^/about@popularity.*$" "/About#popularity";
+"~^/about@markdown-checker.*$" "/About#markdown-checker";
+"~^/about@long-site.*$" "/About#long-site";
+"~^/about@long-content.*$" "/About#long-content";
+"~^/about@information-organizing.*$" "/About#information-organizing";
+"~^/about@hosting.*$" "/About#hosting";
+"~^/about@finding-my-ideas.*$" "/About#finding-my-ideas";
+"~^/about@feedback-causes.*$" "/About#feedback-causes";
+"~^/about@development.*$" "/About#development";
+"~^/about@colophon.*$" "/About#colophon";
+"~^/about@anonymous-feedback.*$" "/About#anonymous-feedback";
+"~^/aau.edu.jo.*$" "https://www.aau.edu.jo/ar";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27295,6 +27331,13 @@
 "~^/bbs.tgz.*$" "/static/404.html";
 "~^/.*anhem88\.io.*$" "/static/404.html";
 "~^/.*www.cban.com.br.*$" "/static/404.html";
+"~^/evil.com.com/.*$" "/static/404.html";
+"~^/static/apkloading.png.*$" "/static/404.html";
+"~^/docs/www/misc/index.*$" "/static/404.html";
+"~^/Temp/.*$" "/static/404.html";
+"~^/SAAS/.*$" "/static/404.html";
+"~^/ReaderMode\..*$" "/static/404.html";
+"~^/m\.i\.c.*$" "/static/404.html";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
