--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4212,3 +4212,87 @@ default "";
 "~^/docs/genetics/selection/2019-karavani-supplement.pdf.*$" "/docs/genetics/selection/artificial/2019-karavani-supplement.pdf";
 "~^/docs/statistics/bayes/2010-stigler.pdf.*$" "/docs/statistics/bayes/2010-stigler-2.pdf";
 "~^/docs/reinforcement-learning/2001-hochreiter.pdf.*$" "/docs/reinforcement-learning/meta-learning/2001-hochreiter.pdf";
+"~^/docs/design/2014-650139-tobiasfrerejonesversusjonathanhoefler.pdf.*$" "/docs/design/typography/2014-650139-tobiasfrerejonesversusjonathanhoefler.pdf";
+"~^/docs/design/2010-03-dowlingduncan-charteroftheforest.html.*$" "/docs/design/typography/2010-03-dowlingduncan-charteroftheforest.html";
+"~^/docs/statistics/1964-goldman.pdf.*$" "/docs/statistics/probability/1964-goldman.pdf";
+"~^/docs/statistics/decision/2021-smith.pdf.*$" "/docs/reinforcement-learning/exploration/2021-smith.pdf";
+"~^/docs/cs/1985-feynman-surelyyourejokingmrfeynman-ch18-safecrackermeetsafecracker.pdf.*$" "/docs/cs/cryptography/1985-feynman-surelyyourejokingmrfeynman-ch18-safecrackermeetsafecracker.pdf";
+"~^/docs/economics/2003-ansolabehere.pdf.*$" "/docs/advertising/2003-ansolabehere.pdf";
+"~^/docs/genetics/heritable/2021-horvath.pdf.*$" "/docs/genetics/heritable/correlation2021-horvath.pdf";
+"~^/docs/genetics/heritable/correlation2021-horvath.pdf.*$" "/docs/genetics/heritable/correlation/2021-horvath.pdf";
+"~^/docs/cs/1959-shannon.pdf.*$" "/docs/cs/algorithm/1959-shannon.pdf";
+"~^/docs/cs/1961-rao.pdf.*$" "/docs/cs/algorithm/1961-rao.pdf";
+"~^/docs/cs/1962-rado.pdf.*$" "/docs/cs/computable/1962-rado.pdf";
+"~^/docs/cs/1962-sandelius.pdf.*$" "/docs/cs/algorithm/1962-sandelius.pdf";
+"~^/docs/cs/1964-gluskin.pdf.*$" "/docs/cs/computable/1964-gluskin.pdf";
+"~^/docs/cs/1978-cover.pdf.*$" "/docs/cs/algorithm/1978-cover.pdf";
+"~^/docs/cs/1979-may.pdf.*$" "/docs/cs/hardware/1979-may.pdf";
+"~^/docs/cs/1980-rytter.pdf.*$" "/docs/cs/algorithm/1980-rytter.pdf";
+"~^/docs/cs/1981-cohen.pdf.*$" "/docs/cs/algorithm/1981-cohen.pdf";
+"~^/docs/cs/1982-perlis.pdf.*$" "/docs/cs/algorithm/1982-perlis.pdf";
+"~^/docs/cs/1986-levin.pdf.*$" "/docs/cs/algorithm/1986-levin.pdf";
+"~^/docs/cs/1987-baker.pdf.*$" "/docs/cs/hardware/1987-baker.pdf";
+"~^/docs/cs/1987-conway.pdf.*$" "/docs/cs/computable/1987-conway.pdf";
+"~^/docs/cs/1988-flaherty.pdf.*$" "/docs/cs/computable/1988-flaherty.pdf";
+"~^/docs/cs/1989-devore.pdf.*$" "/docs/cs/algorithm/1989-devore.pdf";
+"~^/docs/cs/1989-robson.pdf.*$" "/docs/cs/algorithm/1989-robson.pdf";
+"~^/docs/cs/1990-miller.pdf.*$" "/docs/cs/security/1990-miller.pdf";
+"~^/docs/cs/1993-hauenstein.pdf.*$" "/docs/cs/hardware/1993-hauenstein.pdf";
+"~^/docs/cs/1994-burke-informationandsecrecyvannevarbushultrandtheothermemex.pdf.*$" "/docs/cs/hardware/1994-burke-informationandsecrecyvannevarbushultrandtheothermemex.pdf";
+"~^/docs/cs/1994-levitin.pdf.*$" "/docs/cs/algorithm/1994-levitin.pdf";
+"~^/docs/cs/1998-reeds.pdf.*$" "/docs/cs/cryptography/1998-reeds.pdf";
+"~^/docs/cs/2001-demarco-peopleware-whymeasureperformance.pdf.*$" "/docs/cs/algorithm/2001-demarco-peopleware-whymeasureperformance.pdf";
+"~^/docs/cs/2001-scott.pdf.*$" "/docs/cs/algorithm/2001-scott.pdf";
+"~^/docs/cs/1956-shannon.pdf.*$" "/docs/cs/algorithm/1956-shannon.pdf";
+"~^/docs/cs/1993-marcus.pdf.*$" "/docs/cs/algorithm/1993-marcus.pdf";
+"~^/docs/cs/2020-fleder.pdf.*$" "/docs/cs/algorithm/2020-fleder.pdf";
+"~^/docs/cs/2020-leiserson.pdf.*$" "/docs/cs/hardware/2020-leiserson.pdf";
+"~^/docs/cs/2021-hochschild.pdf.*$" "/docs/cs/hardware/2021-hochschild.pdf";
+"~^/docs/cs/2022-akhlaghpour.pdf.*$" "/docs/cs/computable/2022-akhlaghpour.pdf";
+"~^/docs/cs/2021-ranganathan.pdf.*$" "/docs/cs/hardware/2021-ranganathan.pdf";
+"~^/docs/cs/2020-masanet.pdf.*$" "/docs/cs/hardware/2020-masanet.pdf";
+"~^/docs/cs/2020-troise.pdf.*$" "/docs/cs/hardware/2020-troise.pdf";
+"~^/docs/cs/2019-kleppmann.pdf.*$" "/docs/cs/algorithm/2019-kleppmann.pdf";
+"~^/docs/cs/2019-bavandpour.pdf.*$" "/docs/cs/hardware/2019-bavandpour.pdf";
+"~^/docs/cs/2019-aaronson.pdf.*$" "/docs/cs/computable/2019-aaronson.pdf";
+"~^/docs/cs/2018-mahmoodi.pdf.*$" "/docs/cs/hardware/2018-mahmoodi.pdf";
+"~^/docs/cs/2017-li.pdf.*$" "/docs/cs/hardware/2017-li.pdf";
+"~^/docs/cs/2017-zhou.pdf.*$" "/docs/cs/algorithm2017-zhou.pdf";
+"~^/docs/cs/2017-ridel.pdf.*$" "/docs/cs/hardware/2017-ridel.pdf";
+"~^/docs/cs/2016-zhang.pdf.*$" "/docs/cs/hardware/2016-zhang.pdf";
+"~^/docs/cs/algorithm2017-zhou.pdf.*$" "/docs/cs/algorithm/2017-zhou.pdf";
+"~^/docs/cs/2017-hazel.pdf.*$" "/docs/cs/algorithm/2017-hazel.pdf";
+"~^/docs/cs/2015-kanev.pdf.*$" "/docs/cs/hardware/2015-kanev.pdf";
+"~^/docs/cs/2015-zonenberg.pdf.*$" "/docs/cs/security/2015-zonenberg.pdf";
+"~^/docs/cs/2015-brooks.pdf.*$" "/docs/cs/hardware/2015-brooks.pdf";
+"~^/docs/cs/2014-horowitz.pdf.*$" "/docs/cs/hardware/2014-horowitz.pdf";
+"~^/docs/cs/2014-morgado.pdf.*$" "/docs/cs/algorithm/2014-morgado.pdf";
+"~^/docs/cs/2013-geravand.pdf.*$" "/docs/cs/security/2013-geravand.pdf";
+"~^/docs/cs/2012-jarvisalo.pdf.*$" "/docs/cs/algorithm/2012-jarvisalo.pdf";
+"~^/docs/cs/2021-khan.pdf.*$" "/docs/cs/hardware/2021-khan.pdf";
+"~^/docs/cs/2010-hameed.pdf.*$" "/docs/cs/hardware/2010-hameed.pdf";
+"~^/docs/cs/2010-bates.pdf.*$" "/docs/cs/hardware/2010-bates.pdf";
+"~^/docs/cs/2009-narayanan.pdf.*$" "/docs/cs/algorithm/2009-narayanan.pdf";
+"~^/docs/cs/2009-gluck.pdf.*$" "/2009-gluck.pdf";
+"~^/docs/cs/2015-mcsherry.pdf.*$" "/docs/cs/algorithm/2015-mcsherry.pdf";
+"~^/docs/cs/2012-johnson.pdf.*$" "/docs/cs/algorithm/2012-johnson.pdf";
+"~^/docs/cs/2011-pellegrino.pdf.*$" "/docs/cs/algorithm/2011-pellegrino.pdf";
+"~^/docs/cs/2011-yelick.pdf.*$" "/docs/cs/hardware/2011-yelick.pdf";
+"~^/docs/cs/2010-ren.pdf.*$" "/docs/cs/hardware/2010-ren.pdf";
+"~^/docs/cs/2010-aldubaee.pdf.*$" "/docs/cs/algorithm/2010-aldubaee.pdf";
+"~^/docs/cs/2009-mytkowicz.pdf.*$" "/docs/cs/algorithm/2009-mytkowicz.pdf";
+"~^/docs/cs/2008-changizi.pdf.*$" "/docs/cs/algorithm/2008-changizi.pdf";
+"~^/docs/cs/2007-drepper.pdf.*$" "/docs/cs/hardware/2007-drepper.pdf";
+"~^/docs/cs/2005-knuth-taocp-v4-prefascicle4b.pdf.*$" "/docs/cs/algorithm/2005-knuth-taocp-v4-prefascicle4b.pdf";
+"~^/docs/cs/2002-karger.pdf.*$" "/docs/cs/security/2002-karger.pdf";
+"~^/docs/cs/2003-fortnow.pdf.*$" "/docs/cs/algorithm/2003-fortnow.pdf";
+"~^/docs/ai/2002-bixby.pdf.*$" "/2002-bixby.pdf";
+"~^/docs/ai/2002-behr.pdf.*$" "/2002-behr.pdf";
+"~^/docs/cs/2001-pawson.pdf.*$" "/docs/cs/algorithm/2001-pawson.pdf";
+"~^/docs/cs/1977-knuth.pdf.*$" "/docs/cs/algorithm/1977-knuth.pdf";
+"~^/2002-behr.pdf.*$" "/docs/cs/algorithm/2002-behr.pdf";
+"~^/2002-bixby.pdf.*$" "/docs/cs/algorithm/2002-bixby.pdf";
+"~^/2009-gluck.pdf.*$" "/docs/cs/algorithm/2009-gluck.pdf";
+"~^/docs/cat/genetics/2002-cameronbeaumont.pdf.*$" "/docs/cat/psychology/2002-cameronbeaumont.pdf";
+"~^/docs/psychology/2018-gordon-supplement.pdf.*$" "/docs/psychiatry/2018-gordon-supplement.pdf";
+"~^/docs/psychology/2018-gordon.pdf.*$" "/docs/psychiatry/2018-gordon.pdf";
